增加 ProductRepository 以及 Detail頁面
增加 ProductRepository 以及 Detail頁面

--- a/InterViewProject/Views/Home/Index.cshtml
+++ b/InterViewProject/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "首頁";
 }
 
-@model IQueryable<ProductListView>
+@model IEnumerable<ProductListView>
 <div class="row pb-3">
     @foreach (var product in Model)
     {
