--- a/InterViewProject/Pages/Account/Login.cshtml
+++ b/InterViewProject/Pages/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @{
+    Layout = "/Views/Shared/_Layout.cshtml";
 }
-
 <div class="container border" style="padding:20px">
     <form method="post">
         <div class="text-danger" asp-validation-summary="All">
@@ -9,7 +9,7 @@
         </div>
         <div class="mb-3 row">
             <div class="col-2"></div>
-            <label asp-for="Credential.UserName"></label>
+            <label asp-for="Credential.UserName">使用者Email</label>
             <div class="col-5">
                 <input asp-for="Credential.UserName" class="form-control" />
                 <span asp-validation-for="Credential.UserName" class="text-danger"></span>
@@ -17,17 +17,10 @@
         </div>
         <div class="mb-3 row">
             <div class="col-2"></div>
-            <label asp-for="Credential.Password"></label>
+            <label asp-for="Credential.Password">使用者密碼</label>
             <div class="col-5">
                 <input type="password" asp-for="Credential.Password" class="form-control" />
                 <span asp-validation-for="Credential.Password" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="mb-3 row form-check">
-            <div class="col-2"></div>
-            <div class="col-5">
-                <input type="checkbox" class="form-check-input" asp-for="Credential.RememberMe" />
-                <label class="form-check-label" asp-for="Credential.RememberMe"></label>
             </div>
         </div>
         <div class="mb-3 row">
