完成JWT 登陸驗證功能
完成JWT 登陸驗證功能

--- a/InterViewProject/Pages/Account/Logout.cshtml
+++ b/InterViewProject/Pages/Account/Logout.cshtml
@@ -1,3 +1,6 @@
 ﻿@page
+@model InterViewProject.Pages.Account.LogoutModel
 @{
+    ViewData["Title"] = "登出";
+    Layout = "/Views/Shared/_Layout.cshtml";
 }
