--- a/InterViewProject/Views/Shared/_Layout.cshtml
+++ b/InterViewProject/Views/Shared/_Layout.cshtml
@@ -25,6 +25,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        @if (User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="EditList">編輯商品</a>
+                            </li>
+                        }
                     </ul>
                 </div>
                 <div class="mr-2">
